--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Abschluss: Bachelor of Arts</li>
 <h1>
 <a id="kontakt" class="anchor" href="#kontakt" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kontakt</h1>
 
-<p>Email: <a href="mailto:kontakt@olga-schaefer.info">kontakt@olga-schaefer.info</a><br>
+<p>Email: kontakt at olga-schaefer.info<br>
 Web: <a href="http://www.olga-schaefer.info">http://www.olga-schaefer.info</a></p>
         </section>
 
