changed typo with lists

--- a/index.html
+++ b/index.html
@@ -63,16 +63,19 @@ Abschluss: Bachelor of Arts</li>
 
 <ul>
 <li>Sprachkenntnisse
-
-<ul>
-<li>Deutsch in Wort und Schrift</li>
-<li>Russisch in Wort und Schrift</li>
-<li>Englisch Grundkenntnisse</li>
-</ul>
+  <ul>
+    <li>Deutsch in Wort und Schrift</li>
+    <li>Russisch in Wort und Schrift</li>
+    <li>Englisch Grundkenntnisse</li>
+  </ul>
 </li>
-<li>EDV-Kenntnisse Kenntnisse in den Microsoft Office Produkten </li>
-<li>Führerschein Klasse B</li>
-</ul>
+
+<li>EDV-Kenntnisse
+  <ul>
+    <li>Kenntnisse in den Microsoft Office Produkten</li>
+    <li>Führerschein Klasse B</li>
+  </ul>
+</li>
 
 <h1>
 <a id="kontakt" class="anchor" href="#kontakt" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kontakt</h1>
