--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@ Abschluss: Bachelor of Arts</li>
 
 <li>EDV-Kenntnisse
   <ul>
-    <li>Kenntnisse in den Microsoft Office Produkten</li>
+    <li>Kenntnisse in den Microsoft Office Produkten</li>    
+    <li>IBM SPSS</li>
+    <li>Kubuntu Linux</li>
+  </ul>
+</li>
+
+<li>Sonstige Kenntnisse
+  <ul>
     <li>Führerschein Klasse B</li>
   </ul>
 </li>
