--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Olga Schäfer</h1>
-          <h2>Gesundheits- und Sozialwirtschaft (B.A.)</h2>
+          <h2>Betriebswirtin mit Schwerpunkt Gesundheits- und Sozialwirtschaft (B.A.)</h2>
         </header>
 
         <hr>
@@ -37,7 +37,7 @@
 
 <li>2004 - 2005 Berufsoberschule Wirtschaft Bad Neuenahr<br>
 Abschluss: Hochschulreife (FH)</li>
-<li>2015 Hochschule Koblenz, RheinAhrCampus in Remagen<br>
+<li>2015 Hochschule Koblenz, RheinAhrCampus Remagen<br>
 Studiengang: BWL mit Vertiefung GuS<br>
 Abschluss: Betriebswirtin mit Schwerpunkt Gesundheits- und Sozialwirtschaft (B.A.)</li>
 </ul>
