removed CV and added link to Xing

--- a/index.html
+++ b/index.html
@@ -26,133 +26,11 @@
 
         <section id="main_content">
           <h1>
-<a id="lebenslauf" class="anchor" href="#lebenslauf" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lebenslauf</h1>
+<a id="Xing" class="anchor" href="#xing" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+	<a href="http://www.xing.com/profile/Olga_Schaefer21">Mein Xing-Profil --></a>
+</h1>
 
 <hr>
-
-<h2>
-<a id="ausbildungsgang" class="anchor" href="#ausbildungsgang" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ausbildungsgang</h2>
-
-<ul>
-
-<li>2004 - 2005 Berufsoberschule Wirtschaft Bad Neuenahr<br>
-Abschluss: Hochschulreife (FH)</li>
-<li>2015 Hochschule Koblenz, RheinAhrCampus Remagen<br>
-Studiengang: BWL mit Vertiefung GuS<br>
-Abschluss: Betriebswirtin mit Schwerpunkt Gesundheits- und Sozialwirtschaft (B.A.)</li>
-</ul>
-
-<h2>
-<a id="praxis" class="anchor" href="#praxis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Praxis</h2>
-
-<ul>
-<li>2001 - für 4 Monate Praktikum bei Fa. FJL Automobile in Weißenthurm</li>
-<li>2001 - 2004 Ausbildung zur Automobilkauffrau bei Fa. FJL Automobile<br>
-Abschluss: Automobilkauffrau (HwK)<br>
-Ich übernahm die komplette Verantwortung für:
-<ul>
-	<li>Kontakt mit Kunden und Lieferanten sowie Aktualisierung ihrer Daten</li>
-	<li>Vorbereitung von Werkstattaufträgen sowie Umwandlung in Rechnungen</li>
-	<li>Sicherstellung der Teileverfügbarkeit im Lager sowie Ersatzteilebestellung</li>
-	<li>Überwachung der Fertigstellungs- und Auslieferungsterminen</li>
-	<li>Erstellung von Verkaufsstatistiken, Ermittlung von Umschlanghäufigkeit</li>
-	<li>Überwachung von Zahlungseingängen, Anmahnung von Außenstände</li>
-	<li>Kontrolle über Wareneingang, Rechnungen und Lieferpapieren</li>
-	<li>Pflege einer Kundendatenbank für Aktionen des Servicemarketings</li>
-</ul>
-</li>
-<li>2007 - für 6 Wochen Praktikum bei AWO Haus der Generationen in Neuwied<br>
-Während meinem Sozialpraktikum erhielt ich Einblicke und Erfahrungen unteranderem in:
-<ul>
-	<li>Unterstützung bei Veranstaltungen und Gruppenangeboten (Konzert, Aquarellgruppe)</li>
-	<li>Mitwirkung von Beratungsgesprächen (Einrichtung und Leistungsangebot)</li>
-	<li>Erhebung biografischer Daten (Heimaufnahme)</li>
-	<li>Einzelbetreuung bettliegenden Bewohnern (Gespräche, Licht-/Musiktherapie)</li>
-</ul>
-</li>
-<li>2008 - 2013 Studentenjob in der Hochschulbibliothek am RheinAhrCampus<br>
-Unteranderem erledigte ich folgende Tätigkeiten:
-<ul>
-	<li>Ordnung am Standort, Bucheinbindung</li>
-	<li>Kontrolle der Signaturen, Buchpflege</li>
-	<li>Beratung, Kassenführung, Ausleihe</li>
-</ul>
-</li>
-<li>2014 - für 13 Wochen Rotationspraktikum im Krankenhaus Porz am Rhein<br>
-In dieser Zeit hatte ich die Gelegenheit, bei den Tätigkeiten mit zu helfen und konnte so einen
-praktischen Einblick in den folgenden Bereichen erhalten:
-<ul>
-	<li>Wirtschaftsabteilung (allg. kaufm. Tätigkeit, Erstellung von Statistiken)</li>
-	<li>stationäre Abrechnung (Patientenaufnahme, Abrechnungen, Kassenführung, MDK-Fälle)</li>
-	<li>medizinische Dokumentation (Fallpauschalensystem, Kodierrichtlinien)</li>
-</ul>
-</li>
-
-<li>2014 - für 12 Wochen Praktikum in St. Elisabeth-Krankenhaus Köln-Hohenlind im Bereich Qualitätsmanagement<br>
-Einblicknahme in die Auswertungen des Qualitätsmanagements und Aussagenanalyse zur:
-<ul>
-	<li>Erfassung von Patientenrückmeldungen (Beschwerdemanagement)</li>
-	<li>Auswertungen und Visualisierung von Daten (Excel)</li>
-	<li>Erfassen von Befunden im Krankenhausinformationssystem (Urlaubsvertretung)</li>
-</ul>	
-</li>
-
-<li>2014 - 2015 16 Wochen Erstellung meiner praxisorientierten Bachelor-Thesis zum Thema “Steigerung
-der Patientenzufriedenheit in der Prämedikationsambulanz durch Optimierung der
-Strukturen und Prozesse” am Beilspiel der St. Elisabeth Köln-Hohenlind GmbH, Note: 1,7.
-<ul>
-	<li>Planung und Vorbereitung der Projektarbeit (Ziel, Verfahren, Strategie)</li>
-	<li>Durchführung der Untersuchung (Beobachtungen und Zeitmessungen vor Ort, Patientenbefragungen sowie -begleitungen, Patientenrückmeldungen)</li>
-	<li>Datenauswertung und Visualisierung der Ergebnisse (Excel)</li>
-	<li>Identifizierung der Schwachstellen (Wartezeiten, Patientenunzufriedenheit)</li>
-	<li>Ableitung von Handlungsvorschlägen (Literaturrecherche, offene Gespräche mit Personal und Patienten)</li>
-</ul>
-</li>
-</ul>
-
-<h2>
-<a id="projekte-waehrend-des-studiums" class="anchor" href="#projekte-waehrend-des-studiums" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projekte während des Studiums</h2>
-
-<ul>
-	<li>Instrumente zur Steigerung der Mitarbeitermotivation im Pflegeberuf.</li>
-	<li>Mobbing im Gesundheitsunternehmen aus Arbeitgebersicht.</li>
-	<li>Griechenlands aktuelle Regierung – Meinung und Wissen zur neuen griechischen
-Regierung.</li>
-	<li>Fundraising im Krankenhaus - Mittelbeschaffung im Gesundheitswesen am Beispiel
-der Palliativstation des Klinikums Köln-Merheim.</li>
-	<li>Zufriedenheitsanalyse der Bewohner am Beispiel des evangelischen Altenhilfezentrum
-gGmbH „Ernst Stoltenhoff Haus“ in Bonn.</li>
-	<li>Teilhabe behinderter Menschen am Arbeitsleben am Beispiel der Virtuellen Werkstatt
-XTERN. St. Raphael - Caritas Alten- und Behindertenhilfe in Sinzig.</li>
-</ul>
-
-<h2>
-<a id="sonstige-qualifikationen" class="anchor" href="#sonstige-qualifikationen" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sonstige Qualifikationen</h2>
-
-<ul>
-<li>Sprachkenntnisse
-  <ul>
-    <li>Deutsch: Wort und Schrift</li>
-    <li>Russisch: Wort und Schrift</li>
-    <li>Englisch: Grundkenntnisse</li>
-  </ul>
-</li>
-
-<li>EDV-Kenntnisse
-  <ul>
-    <li>Microsoft Office: gut</li>
-	<li>LibreOffice: gut</li>
-    <li>IBM SPSS: gut</li>
-	<li>KIS: Grundkentnisse</li>
-    <li>Kubuntu Linux: gut</li>
-  </ul>
-</li>
-
-<li>Sonstige Kenntnisse
-  <ul>
-    <li>Führerschein: Klasse B</li>
-  </ul>
-</li>
 
 <h1>
 <a id="kontakt" class="anchor" href="#kontakt" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kontakt</h1>
